fixed problem with dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@theme {
-  --tailwind-darkMode: "class";
-}
+@variant dark (&:where(.dark, .dark *));
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
